<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txtWordSuggest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="5dp"
        android:textStyle="bold"
        android:fontFamily="@font/font_main"
        android:text="@string/txt_word" />

    <TextView
        android:id="@+id/txtIPASuggest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:fontFamily="@font/font_main"
        android:text="@string/txt_ipa" />

    <TextView
        android:id="@+id/txtTypeSuggest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:fontFamily="@font/font_main"
        android:layout_marginBottom="5dp"
        android:text="@string/txt_Type" />
</LinearLayout>