<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layout_startapp"
    android:orientation="vertical"
    tools:context=".StartApp">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:text="@string/welcome_app"
        android:textColor="#fff"
        android:textSize="40sp"
        android:textStyle="bold|italic" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imgEllipse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/name_copy"
            android:layout_marginTop="50dp"
            app:srcCompat="@drawable/elogo" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:contentDescription="@string/name_copy"
            app:srcCompat="@drawable/astronat" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLetGo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold|italic"
            android:textSize="25sp"
            android:background="@drawable/layout_custom_button"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/let_go" />
    </LinearLayout>
</LinearLayout>