<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/layout_startapp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgPremium"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:contentDescription="@string/name_copy"
            app:srcCompat="@drawable/vip" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="5"
            android:fontFamily="@font/font_main"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="25sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imgProfile"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:contentDescription="@string/name_copy"
            app:srcCompat="@drawable/man" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:background="@android:color/transparent"
        android:orientation="horizontal">

        <!--        <ListView-->
        <!--            android:id="@+id/lvSuggest"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="350dp"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            android:background="@drawable/custom_bg_suggest"-->
        <!--            android:layout_marginTop="5dp"-->
        <!--            android:visibility="gone"-->
        <!--            android:elevation="8dp"-->
        <!--            app:layout_constraintTop_toBottomOf="@+id/searchView" />-->
        <!-- FrameLayout để chứa ListView -->

        <SearchView
            android:id="@+id/searchView"
            style="@style/CustomSearchView"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:background="@drawable/custom_bg_search"
            android:iconifiedByDefault="false"
            android:queryHint="Search..."
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </SearchView>

    </androidx.constraintlayout.widget.ConstraintLayout>



    <LinearLayout
        android:id="@+id/layoutDictonary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/custom_border"
        android:orientation="horizontal"
        android:padding="20dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="45dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:contentDescription="@string/name_copy"
            app:srcCompat="@drawable/dictionary1" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/font_main"
            android:text="@string/vocabulary"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:layout_marginStart="150dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/name_copy"
            app:srcCompat="@drawable/left_arrow" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/font_main"
            android:text="@string/name_group"
            android:textSize="40sp"
            android:textStyle="bold" />

        <ListView
            android:id="@+id/lvMemberGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:divider="@android:color/transparent"
            android:dividerHeight="15dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/name_copy"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/bgb" />
    </LinearLayout>


</LinearLayout>